# TLGMBT

./: THSR.json  THSR.py  THSRID.json  TRA.json  TRA.py  TRAID.json  TRAStation.json  TrainAttribute.py  auth.py  bus.py  config.json  main.py  pyproject.toml  requirement.txt  thsr_usr.py  ticket.py  user_inf.py
thsr/: 1013334846.json  730270828.json
user/: 1013334846.json  1137744569.json  730270828.json
