[tool.poetry]
name = "repl_python3_BT1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
user-agent = "^0.1.9"
telegram = "^0.0.1"
flask = "^1.1.2"
python-telegram-bot = "^13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
